Update transcription reports

--- a/reports/main.Rmd
+++ b/reports/main.Rmd
@@ -29,9 +29,36 @@ read_chunk("5-transcription-matches/results.R")
 
 # Determining the sounds to imitate
 
+We started with 6 sounds in each of 6 categories and reduced that number to 4 sounds in each of 4 categories through two "odd one out" norming experiments.
+
 # Collecting iterated imitations
 
+```{r num_imitations}
+data("imitations")
+
+ggplot(imitations, aes(x = generation)) +
+  geom_line(stat = "bin", binwidth = 1) +
+  scale_x_continuous(breaks = 0:8)
+
+ggplot(imitations, aes(x = generation)) +
+  geom_line(aes(color = factor(seed_id)),
+            stat = "bin", binwidth = 1,
+            show.legend = FALSE) +
+  scale_x_continuous(breaks = 0:8)
+```
+
 # Matching imitations to original sounds
+
+```{r imiation_matches}
+data("imitation_matches")
+
+ggplot(imitation_matches, aes(x = imitation_id)) +
+  geom_histogram(stat = "bin", binwidth = 1)
+
+ggplot(imitation_matches, aes(x = imitation_id)) +
+  geom_histogram(stat = "bin", binwidth = 1) + 
+  facet_wrap("question_type")
+```
 
 # Collecting transcriptions of sounds
 
@@ -57,7 +84,7 @@ transcription_uniqueness <- transcription_frequencies %>%
   group_by(message_type, message_id) %>%
   summarize(
     num_words = sum(n),
-    num_unique = length(unique(word)),
+    num_unique = n_distinct(text),
     perct_unique = num_unique/num_words
   )
 
@@ -94,7 +121,7 @@ transcription_matches %>%
 Subjects were excluded if they failed the catch trial, which indicated
 that they should select the third option.
 
-```{r, catch-trials}
+```{r, catch-trials, fig.width = 4}
 exclusions <- transcription_matches %>%
   filter(question_type == "catch_trial") %>%
   mutate(is_correct_f = factor(is_correct, labels = c("Failed", "Passed"))) %>%
@@ -105,7 +132,7 @@ label_bump <- 4
 
 ggplot(exclusions, aes(x = is_correct_f, y = n)) +
   geom_bar(stat = "identity") +
-  geom_label(aes(label = n, y = ifelse(is_correct_f == "Failed", n + label_bump, n - label_bump))) +
+  geom_text(aes(label = n, y = ifelse(is_correct_f == "Failed", n + label_bump, n - label_bump))) +
   scale_x_discrete("")
 ```
 
@@ -125,3 +152,7 @@ ggplot(exclusions, aes(x = is_correct_f, y = n)) +
 
 ```{r, model-preds}
 ```
+
+### Agreement as a predictor of matching accuracy
+
+Do the imitations where there is a lot of agreement in the transcriptions have higher matching accuracy?
