Include plot depicting number of match responses per word

--- a/reports/main.Rmd
+++ b/reports/main.Rmd
@@ -316,6 +316,11 @@ that they should select the third option.
 ```{r, 5-catch-trials, fig.width = 4}
 ```
 
+### Number of responses
+
+```{r 5-responses-per-question}
+```
+
 ## Results
 
 ```{r, 5-plot-template}
