Moved analyses from evolang talk to main report

--- a/reports/design.Rmd
+++ b/reports/design.Rmd
@@ -13,7 +13,7 @@ opts_chunk$set(
   echo = FALSE,
   fig.path = "figs/",
   cache = TRUE,
-  cache.path = "cache/"
+  cache.path = ".cache/"
 )
 ```
 
