--- a/reports/4-collect-transcriptions/report.Rmd
+++ b/reports/4-collect-transcriptions/report.Rmd
@@ -4,6 +4,8 @@ author: "Pierce Edmiston"
 output:
   html_document:
     theme: flatly
+    toc: true
+    toc_float: true
 ---
 
 ```{r config, echo = FALSE, message = FALSE}
@@ -11,6 +13,7 @@ library(knitr)
 opts_chunk$set(
   echo = FALSE,
   message = FALSE,
+  warning = FALSE,
   fig.path = 'figs/'
 )
 
