--- a/reports/5-transcription-matches/report.Rmd
+++ b/reports/5-transcription-matches/report.Rmd
@@ -13,10 +13,15 @@ opts_chunk$set(
   echo = FALSE,
   message = FALSE,
   fig.path = "figs/",
+  cache = TRUE,
   cache.path = ".cache/"
 )
 
 read_chunk("results.R")
+read_chunk("../theme.R")
+```
+
+```{r global-theme}
 ```
 
 ```{r 5-setup}
@@ -71,5 +76,7 @@ that they should select the third option.
 
 Do the imitations where there is a lot of agreement in the transcriptions have higher matching accuracy?
 
-```{r 5-transcription-agreement-matching-accuracy}
+**Note** the tables of model results are printed _before_ the plots they are associated with.
+
+```{r 5-matching-by-transcription-agreement, results = 'asis'}
 ```
