--- a/reports/5-transcription-matches/report.Rmd
+++ b/reports/5-transcription-matches/report.Rmd
@@ -13,7 +13,7 @@ opts_chunk$set(
   echo = FALSE,
   message = FALSE,
   fig.path = "figs/",
-  cache = TRUE,
+  cache = FALSE,
   cache.path = ".cache/"
 )
 
@@ -21,7 +21,7 @@ read_chunk("results.R")
 read_chunk("../theme.R")
 ```
 
-```{r global-theme}
+```{r theme}
 ```
 
 ```{r 5-setup}
