--- a/reports/main.Rmd
+++ b/reports/main.Rmd
@@ -10,7 +10,7 @@ output:
 
 This research intends to show that conventionalized word forms can arise gradually and uneffortfully simply from the repetition of imitations of environmental sounds. Participants played an online version of the children's game "telephone" where a message is passed from person to person with the goal of keeping the message unchanged. Instead of a typical message, participants had to pass on imitations of environment sounds (e.g., glass breaking, water splashing). These imitations were expected to become more wordlike as they are repeated. "Wordlike-ness" is measured in multiple ways, the most important of which is whether imitations take on wordlike meanings as they are repeated. At the beginning of the chains, the meaning of the imitations is expected to be yoked to the particular exemplar being imitated. For example, an imitation of a particular breed and disposition of dog. In contrast, one of the features of word meanings is that they are categorical--that a word doesn't necessarily refer to a particular exemplar within a category. If this is true, and if imitations become more wordlike as they are repeated, then we should expect to see the imitations also take on more categorical meanings as they are repeated.
 
-Overall, the fidelity of imitations of environmental sounds in our experiment lasted around 8 generations. Over these generations, there was not a uniform degradation of the signal, instead different types of information decayed more rapidly than others. We found that the imitations lost individuating information more quickly than categorical information, suggesting that repetition may be one way to give rise to more categorical word meanings. Additional evidence to support the claim that the imitations are becoming more wordlike was gathered by having participants transcribe imitations taken at different generations into actual English words. The agreement among these transcriptions improves as the imitations are repeated, supporting the hypothesis that repetition leads to more stable word forms. Moreover, the words that were created from these imitations retained some of the iconic properties of the imitation. Naive participants were able to match these novel words back to the original category of environmental sounds at above chance levels. Together these results suggest that the emergence of some conventionalized word forms may be a product of repetition without intent, providing a way to account for the pervasive levels of iconicity found in languages spoken today.
+Overall, the fidelity of imitations of environmental sounds in our experiment lasted around 8 generations. Over these generations, there was not a uniform degradation of the signal, instead different types of information decayed more rapidly than others. We found that the imitations lost individuating information more quickly than categorical information, suggesting that repetition may be one way to give rise to more categorical meanings of utterances. Additional evidence to support the claim that the imitations are becoming more wordlike was gathered by having participants transcribe imitations taken at different generations into actual English words. The agreement among these transcriptions improves as the imitations are repeated, supporting the hypothesis that repetition leads to more stable word forms. Moreover, the words that were created from these imitations retained some of the iconic properties of the imitation. Naive participants were able to match these novel words back to the original category of environmental sounds at above chance levels. Together these results suggest that the emergence of some conventionalized word forms may be a product of repetition without intent, providing a potential way to account for the pervasive levels of iconicity found in languages spoken today.
 
 ```{r config, echo = FALSE}
 library(knitr)
