Make plots for z-scored similarity judgments

--- a/reports/2-collect-imitations/report.Rmd
+++ b/reports/2-collect-imitations/report.Rmd
@@ -32,5 +32,8 @@ global_theme <- theme_minimal() +
 
 ## Acoustic similarity (judgments)
 
+```{r 2-raters}
+```
+
 ```{r 2-similarity-judgments-within-chains}
 ```
